Attempt to fix sign animation being laggy on small screen sizes and menu bar being cut off on ios safari

--- a/src/App.css
+++ b/src/App.css
@@ -110,7 +110,8 @@
 .home-screen {
   position: relative;
   width: 100vw;
-  height: 100vh; 
+  height: 100vh;
+  height: 100dvh; /* IOS Safari bs*/
   overflow: hidden;
   cursor: url("./assets/cursor/cursor_smaller.png") 39 0, auto;
 }
@@ -121,6 +122,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
+  height: 100dvh; /* IOS Safari bs*/
   transform-origin: 0 0;
   transition: transform 0.5s ease-in-out;
 }
